Added parent and refactoring